<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/text_view_folder_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/target_folder"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white" />

    <Spinner
        android:id="@+id/spinner_folder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/file_folder_hint"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

</LinearLayout>
