<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/partial_primary_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/content_padding_double">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_export_backup"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/content_padding_double" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_export_backup"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/content_padding" />

            <TextView
                android:id="@+id/tvExportScript"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/terminal_bg"
                android:padding="@dimen/content_padding_medium"
                android:fontFamily="monospace"
                android:textIsSelectable="true"
                android:textColor="@color/terminal_green"
                android:layout_marginTop="@dimen/content_padding_medium" />

            <Button
                android:id="@+id/btnCopyScript"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_copy_script"
                android:layout_marginTop="@dimen/content_padding" />

            <Button
                android:id="@+id/btnExportInstructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_export_instructions"
                android:layout_marginTop="@dimen/content_padding_half" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider_grey"
                android:layout_marginTop="@dimen/content_padding_large"
                android:layout_marginBottom="@dimen/content_padding_large" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_import_backup"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_import_backup"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/content_padding" />

            <Button
                android:id="@+id/btnImportBackup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_select_import"
                android:layout_marginTop="@dimen/content_padding_medium" />

            <ProgressBar
                android:id="@+id/pbImport"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_padding_large"
                android:indeterminate="true"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvImportStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_padding"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
