<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ide_background"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcomeRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        tools:context="com.csmide.app.fragments.WelcomeFragment">

        <LinearLayout
            android:id="@+id/actionsContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/openFolderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp"
                android:singleLine="true"
                android:text="@string/action_open_external_folder"
                android:textColor="@color/cc_accent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/openFilesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp"
                android:singleLine="true"
                android:text="@string/action_open_file"
                android:textColor="@color/cc_accent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/openFileFromInternalStorageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp"
                android:singleLine="true"
                android:text="@string/action_open_file_internal"
                android:textColor="@color/cc_accent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/openNewTerminal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp"
                android:singleLine="true"
                android:text="@string/menu_open_new_terminal"
                android:textColor="@color/cc_accent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/openEditorSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp"
                android:singleLine="true"
                android:text="@string/action_open_editor_settings"
                android:textColor="@color/cc_accent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/manageLanguagesSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp"
                android:singleLine="true"
                android:text="@string/title_manage_languages"
                android:textColor="@color/cc_accent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/openSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp"
                android:singleLine="true"
                android:text="@string/menu_settings"
                android:textColor="@color/cc_accent"
                android:textSize="18sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
